<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.login.LoginActivity">

    <include layout="@layout/main_header"
             android:id="@+id/header"
    />
    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView

                android:textStyle="bold"
                android:text="@string/label_masuk"
                android:textSize="@dimen/size_24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/size_30dp"
                android:text="@string/label_email"
                android:textSize="@dimen/size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:maxLines="1"
                android:paddingStart="@dimen/nav_header_vertical_spacing"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/size_16sp"
                android:hint="agus@ags.com"
                android:layout_marginTop="@dimen/size_4dp"
                android:background="@drawable/edt_bg_gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/password"
                android:textSize="@dimen/size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText

                    android:paddingStart="@dimen/nav_header_vertical_spacing"
                    android:background="@drawable/edt_bg_gray"
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/size_16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:textStyle="bold"
                android:background="@drawable/btn_bg_blue"
                android:textColor="@color/white"
                android:text="@string/label_login"
                android:layout_marginTop="@dimen/size_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:layout_marginBottom="@dimen/size_16dp"
                android:gravity="center"
                android:textColor="@color/blue_primary"
                android:text="@string/label_lupa_password"
                android:id="@+id/tv_forgot_pass"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_height="wrap_content"/>

        <FrameLayout
                android:layout_marginTop="@dimen/size_24dp"
                android:background="@color/gray_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_2dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/size_16dp"
    >

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_daftar"
                android:text="@string/label_belum_punya_akun_sini_daftar_dulu"
                android:textSize="@dimen/size_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>